--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ get-metars = "^0.3.1"
 aeromet-py = "^0.1.2"
 fastapi = {extras = ["all"], version = "^0.85.0"}
 pandas = "^2.0.1"
+aiohttp = "^3.8.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^5.2"
