--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ coverage = "^6.5.0"
 bump2version = "^1.0.1"
 dvc = "^2.34.2"
 ipykernel = "^6.22.0"
+dvc-s3 = "^2.22.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
