--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ aeromet-py = "^0.1.2"
 fastapi = {extras = ["all"], version = "^0.85.0"}
 pandas = "^2.0.1"
 aiohttp = "^3.8.4"
+strenum = "^0.4.10"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^5.2"
