--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ strenum = "^0.4.10"
 rocketry = "^2.5.1"
 fastapi = "^0.100.0"
 uvicorn = "^0.22.0"
+jinja2 = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^5.2"
